ui/v2.5/src/index.scss
/* ... */
.detail-item-title {
  color: #868791;
  font-weight: 700;
}

.detail-item-value {
  align-items: center;
  display: flex;
  flex-direction: row;
  white-space: pre-line;

  .birthdate,
  .height-imperial,
  .penis-length-imperial,
  .weight-imperial {
    opacity: 0.65;
  }
}

.input-control,
.text-input {
  border: 0;
  box-shadow: 0 0 0 0 rgba(19, 124, 189, 0), 0 0 0 0 rgba(19, 124, 189, 0),
    0 0 0 0 rgba(19, 124, 189, 0), inset 0 0 0 1px rgba(16, 22, 26, 0.3),
    inset 0 1px 1px rgba(16, 22, 26, 0.4);
  color: $text-color;

  &:focus {
    border: 0;
    box-shadow: 0 0 0 1px $primary, 0 0 0 1px $primary,
      0 0 0 3px rgba(19, 124, 189, 0.3), inset 0 0 0 1px rgba(16, 22, 26, 0.3),
      inset 0 1px 1px rgba(16, 22, 26, 0.4);
    color: $text-color;
  }
}

.input-control,
.input-control:focus,
.input-control:disabled {
  background-color: $secondary;
}

.input-control:disabled {
  opacity: 0.8;
}

.text-input,
.text-input:focus,
.text-input[readonly],
.text-input:disabled {
  background-color: $textfield-bg;
}

textarea.text-input {
  line-height: 2.5ex;
  min-height: 12ex;
  overflow-y: scroll;
}

.table-list {
  min-width: min-content;
}

.table-list a {
  color: $text-color;
}

.table-list table {
  width: inherit;
}

.table-list td,
.table-list th {
  border-left: 1px solid #414c53;
  font-size: 1rem;
  text-align: center;
  vertical-align: middle;

  h5,
  h6 {
    font-size: 1rem;
  }

  &:first-child {
    border-left: none;
  }
}

@media (max-width: 576px) {
  .row.justify-content-center {
    margin-left: 0;
    margin-right: 0;
  }
}

.zoom-0 {
  width: 240px;

  .scene-card-preview {
    height: 135px;
  }

  .portrait {
    height: 180px;
  }

  .gallery-card-image,
  .tag-card-image {
    max-height: 180px;
  }
}

.zoom-1 {
  width: 320px;

  .scene-card-preview {
    height: 180px;
  }

  .portrait {
    height: 240px;
  }

  .gallery-card-image,
  .tag-card-image {
    max-height: 240px;
  }

  .image-card-preview {
    height: 240px;
  }
}

.zoom-2 {
  width: 480px;

  .scene-card-preview {
    height: 270px;
  }

  .portrait {
    height: 360px;
  }

  .gallery-card-image,
  .tag-card-image {
    max-height: 360px;
  }

  .image-card-preview {
    height: 360px;
  }
}

.zoom-3 {
  width: 640px;

  .scene-card-preview {
    height: 360px;
  }

  .portrait {
    height: 480px;
  }

  .tag-card-image,
  .gallery-card-image {
    max-height: 480px;
  }

  .image-card-preview {
    height: 480px;
  }
}

.scene-card-preview,
.gallery-card-image,
.tag-card-image,
.image-card-preview {
  height: auto;
  width: 100%;
}

.preview-button {
  align-items: center;
  display: flex;
  height: 100%;
  justify-content: center;
  position: absolute;
  text-align: center;
  width: 100%;

  button.btn,
  button.btn:not(:disabled):not(.disabled):hover,
  button.btn:not(:disabled):not(.disabled):focus,
  button.btn:not(:disabled):not(.disabled):active {
    background: none;
    border: none;
    box-shadow: none;
  }

  .fa-icon {
    color: $text-color;
    filter: drop-shadow(2px 4px 6px black);
    height: 5em;
    opacity: 0;
    transition: opacity 0.5s;
    width: 5em;

    &:hover {
      opacity: 0.8;
    }
  }

  @media (hover: none), (pointer: coarse) {
    // always show preview button when hovering not supported
    align-items: flex-end;
    justify-content: right;

    .fa-icon {
      height: 3em;
      opacity: 0.8;
      width: 3em;
    }
  }
}

/* this is a bit of a hack, because we can't supply direct class names
   to the react-select controls */
/* stylelint-disable selector-class-pattern */

div.react-select__control {
  background-color: $secondary;
  border-color: $secondary;
  color: $text-color;
  cursor: pointer;
  white-space: nowrap;

  .react-select__single-value,
  .react-select__input-container {
    color: $text-color;
  }

  .react-select__multi-value {
    background-color: $muted-gray;
    color: $text-color;
  }
}

div.react-select__menu-portal {
  z-index: 1600;
}

div.react-select__menu,
div.dropdown-menu {
  background-color: $secondary;
  color: $text-color;
  z-index: 1600;

  .react-select__option,
  .dropdown-item {
    color: $text-color;
  }

  .react-select__option--is-focused,
  .dropdown-item:focus,
  .dropdown-item:hover {
    background-color: #8a9ba826;
    cursor: pointer;
  }
}

div.dropdown-menu {
  max-height: 300px;
  overflow-y: auto;

  .dropdown-item {
    display: flex;
  }
}

/* fix for react-select in input-group */
.input-group .react-select {
  border: 0;
  height: 100%;
  padding: 0;

  .react-select__control {
    border-radius: 0;
  }
}

/* stylelint-enable selector-class-pattern */

.image-thumbnail {
  height: 100px;
  min-width: 50px;
  object-fit: cover;
  object-position: top;
}

.edit-button {
  margin-right: 10px;
}

.wrap-tags {
  column-gap: 10px;
  flex-wrap: wrap;
  row-gap: 10px;

  /* stylelint-disable */
  .badge {
    white-space: normal !important;
    margin: unset;
  }
  /* stylelint-enable */
}

.tag-item {
  background-color: $muted-gray;
  color: $dark-text;
  font-size: 12px;
  font-weight: 400;
  line-height: 16px;
  margin: 5px;
  padding: 2px 6px;

  &:hover {
    cursor: pointer;
  }

  .btn {
    background: none;
    border: none;
    bottom: 2px;
    color: $dark-text;
    font-size: 12px;
    line-height: 1rem;
    margin-right: -0.5rem;
    opacity: 0.5;
    padding: 0 0.5rem;
    position: relative;

    &:active,
    &:hover {
      opacity: 1;
    }
  }

  a {
    color: unset;

    &:hover {
      color: unset;
      text-decoration: none;
    }
  }
}

.filter-container,
.operation-container {
  align-items: center;
  display: flex;
  justify-content: center;
  margin: 0 auto 10px;
}

.filter-item,
.operation-item {
  margin: 0 10px;
}

.rating-100-20 {
  background: #f00;
}

.rating-100-19 {
  background: #ff2409;
}

.rating-100-18 {
  background: #ff4812;
}

.rating-100-17 {
  background: #ff6a07;
}

.rating-100-16 {
  background: #ff8000;
}
/* ... */

